--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,14 +1,10 @@
 name: Go
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [ push, pull_request ]
 
 jobs:
 
-  build:
+  Lint_Build_Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -16,10 +12,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
-
-    - name: Build
-      run: go build -v ./...
+        go-version: 1.17.x
+        
+    - name: Lint
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') &&  && golangci-lint run $MY_PATH -v
 
     - name: Test
-      run: go test -v ./...
+      run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && go test $MY_PATH
+
+    - name: Build
+      run: export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && go build $MY_PATH
