--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
         go-version: 1.17.x
         
     - name: Lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && ls -alt $MY_PATH && golangci-lint run $MY_PATH -v
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && ls -alt $MY_PATH && golangci-lint run $MY_PATH/*.go -v
 
     - name: Test
       run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && go test $MY_PATH
