--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,18 +36,18 @@ linters:
     - exportloopref # детектирование экспорта указателя на переменную внутри цикла
 
 # настройки отдельных линтеров
-linters-settings:
-  goimports:
-   # указываем префикс локальных импортов, они будут группироваться
-    local-prefixes: path/to/module
-  govet:
-   # проверка на использование переменных «в тени»
-    check-shadowing: true
-  goconst:
-   # goconst находит строки не меньше 2 символов, которые встречаются хотя бы 2 раза
-    min-len: 2
-    min-occurrences: 2   
-  funlen:
-   # функция помечается длинной если она больше 100 строк кода либо больше 50 операций
-    lines: 100
-    statements: 50
+#linters-settings:
+#  goimports:
+#   # указываем префикс локальных импортов, они будут группироваться
+#    local-prefixes: path/to/module
+#  govet:
+#   # проверка на использование переменных «в тени»
+#    check-shadowing: true
+#  goconst:
+#   # goconst находит строки не меньше 2 символов, которые встречаются хотя бы 2 раза
+#    min-len: 2
+#    min-occurrences: 2   
+#  funlen:
+#   # функция помечается длинной если она больше 100 строк кода либо больше 50 операций
+#    lines: 100
+#    statements: 50
