--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,10 @@ jobs:
         go-version: 1.17.x
         
     - name: Lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && ls -alt $MY_PATH && golangci-lint run $MY_PATH/*.go -v
+      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && golangci-lint run main -c ../.golangci.yml -v
 
     - name: Test
-      run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && go test $MY_PATH
+      run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go test .
 
     - name: Build
-      run: export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && go build $MY_PATH
+      run: export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go build .
