--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,10 @@ jobs:
         go-version: 1.17.x
         
     - name: Lint
-      run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.43.0 && export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && golangci-lint run -c $GITHUB_WORKSPACE/.golangci.yml -v
+      run: $GITHUB_WORKSPACE/lint.sh
 
-    - name: Test
-      run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go test .
-
-    - name: Build
-      run: export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go build .
+#    - name: Test
+#      run:  export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go test .
+#
+#    - name: Build
+#      run: export MY_PATH=$(echo $GITHUB_REF | awk -F/ '{print $NF}') && cd $MY_PATH  && go build .
