--- a/hw08/product_builder/Dockerfile
+++ b/hw08/product_builder/Dockerfile
@@ -6,10 +6,10 @@ RUN  adduser \
    --home /app goserver && \
 	chown -R goserver /app
 WORKDIR /app
-COPY main.go ./
-#RUN go mod init goserver
+COPY *.go ./
+RUN go mod init goserver
 RUN go mod tidy
 RUN go build -o goserver .
 USER goserver
-EXPOSE 8888
+EXPOSE 8010
 CMD ["./goserver"]
